--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open --port=18000",
+    "start": "ng serve --open --port=18000 --watch=false",
+    "rebuild": "ng serve --port=18000 --watch=false",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
